2015-03-03  Albrecht Dreß

	Improve printing of text/rfc822-headers parts

	* src/balsa-print-object-header.c
	(balsa_print_object_header_new_real),
	(balsa_print_object_header_from_message),
	(balsa_print_object_header_from_body), (header_add_string),
	(header_add_list): implement and respect new parameter gboolean
	print_all_headers.

2015-03-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Remove unnecessary parameter

	* src/balsa-mime-widget-message.c (add_header_gchar),
	(add_header_address_list), (bmw_message_set_headers_d): we do
	not need to pass the BalsaMessage.

2015-03-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Show all headers in a text/rfc822-headers part

	* src/balsa-mime-widget-message.c (add_header_gchar): new
	parameter gboolean show_all_headers;
	(balsa_mime_widget_new_message),
	(add_header_address_list),
	(bmw_message_set_headers_d), (bmw_message_set_headers),
	(balsa_mime_widget_message_set_headers),
	(balsa_mime_widget_message_set_headers_d): use it.

2015-03-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Provide a parent window for the send-progress dialog

	* libbalsa/send.c (ensure_send_progress_dialog),
	(libbalsa_message_send), (lbs_process_queue),
	(libbalsa_process_queue): new parameter GtkWindow *parent.
	* libbalsa/send.h: ditto.
	* src/balsa-message.c: use it.
	* src/balsa-mime-widget-message.c (extbody_send_mail): ditto.
	* src/balsa-mime-widget-vcalendar.c (vevent_reply): ditto.
	* src/main-window.c (send_queued_mail_activated): ditto.
	* src/sendmsg-window.c (send_message_handler): ditto.

2015-03-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix alignment of text/rfc822-headers parts widget

	* src/balsa-mime-widget-message.c
	(balsa_mime_widget_new_message): do not override default
	settings of horizontal align and expand.

2015-03-01  Albrecht Dreß

	Display and print text/rfc822-headers parts

	* libbalsa/body.[hc]: parse text/rfc822-headers parts,
	and store them in the body structure